--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,16 @@ p {
     position: static;
     transform: rotate(0);
   }
+  .testimonials-text {
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+  .testimonial-image {
+  width: 20%;
+  border-radius: 100%;
+  margin: 20px;
+}
 }
 
 @media (min-width: 768px) and (max-width: 1107px) {
