--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,12 @@ p {
     font-size: 1.5rem;
     line-height: 1.5;
   }
+  
+  .testimonial-image {
+    width: 25%;
+    border-radius: 50%;
+    margin: 20px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1107px) {
